# cloudhsm-workshop

./: .codespellrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  THIRD-PARTY-LICENSES  checkov_results.xml  cloudhsm-codepipeline.yaml  clouhsm-codepipeline.yaml  deploy_with_assets.sh  eslint.config.mjs  pack.sh  package-lock.json  precheck.sh
cloudhsm-base/: .gitignore  README.md  buildspec.yml  cdk.context.json  cdk.json  out.json  package-lock.json  package.json  template.yaml
cloudhsm-base/custom_resources/: cloudHSMActivate.expect  requirements.txt
cloudhsm-base/custom_resources/activate_cluster/: README.md  activate_cluster.sh  lambda_function.py
cloudhsm-base/custom_resources/bootstrap_instances/: lambda_function.py
cloudhsm-base/docs/: windows-ssm-management.md
cloudhsm-base/lib/: cloudhsm-base-stack.ts  cloudhsm-ecs-stack.ts  cloudhsm-lookup-stack.ts  cloudhsm-network-stack.ts  vpc-endpoint-waiter.ts  windows-server-stack.ts  windows-systems-manager-quicksetup-stack.ts
cloudhsm-base/pkcs11-5.0-sample/: Dockerfile  run.sh
cloudhsm-base/pkcs11-5.0-sample/app/: CMakeLists.txt
cloudhsm-base/resources/: dashboard.json
cloudhsm-base/scripts/: buildx.sh  deploy.sh
cloudhsm-base/test/: cloudhsm-base.test.ts
custom_resources/bootstrap_instances/: lambda_function.py
custom_resources/cloudhsm_cluster/: lambda_function.py
custom_resources/cloudhsm_hsm/: lambda_function.py
custom_resources/ecs_service_role/: lambda_function.py
custom_resources/initialize_cluster/: readme.md
examples/pkcs11-5.0-sample/: run.sh
(+32 files in other folders)
